<resources>
    <!-- Application strings -->
    <string name="app_name" translatable="false">Phone library</string>

    <!-- Action bar back button string. Is locale dependent for testing -->
    <string name="action_bar_back_button_identifier">Navigate up</string>

    <!-- Menu strings -->
    <string name="bottom_nav_title_favorites">Favorites</string>
    <string name="bottom_nav_title_search">Search</string>
    <string name="bottom_nav_title_home">Home</string>

    <!-- Fragment -Activity titles -->
    <string name="title_activity_main" translatable="false">Phone Library</string>
    <string name="title_activity_fragment_list">Search results</string>
    <string name="title_activity_fragment_detail">Detail</string>
    <string name="title_activity_fragment_favorites">Favorites</string>

    <!-- SEARCH screen -->
    <string name="open_detail">Open detail</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_brand">Search by brand</string>
    <string name="the_logo_of_the_app">The logo of the app</string>
    <string name="edit_text_placeholder">e.g. Xiaomi, Galaxy S10</string>
    <string name="invalid_api_key_message">Invalid API key.</string>
    <string name="no_devices_result_message">Could not load devices. Please try again.</string>

...

    <!-- FAVORITES screen -->
    <string-array name="device_sort_options">
        <item>Sort by name</item>
        <item>Sort by brand</item>
    </string-array>
    <string name="no_favorite_devices_text">No favorite devices yet</string>
    <string name="no_favorite_devices_subtext">Go add some!</string>

    <!-- Spec category display names -->
    <string name="spec_category_display_name_main">Main</string>
    <string name="spec_category_display_name_release">Release</string>
    <string name="spec_category_display_name_physical">Physical</string>
...
