...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.DeviceDetailFragment"
                                                   android:id="@+id/constraintLayout"
                                                   android:background="@android:color/white"
>

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
...
            android:background="@color/colorBackground"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            android:id="@+id/deviceNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
...
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:srcCompat="@drawable/ic_favorite_border_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/favoriteFloatingActionButton"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:fabCustomSize="50dp"
            app:maxImageSize="30dp"
    />
...
